2007-12-13	Frank Richter	<frank.richter@gmail.com>

* Tweak keyboard input to support characters from Alt+/Ctrl+something keys.

2007-12-12	Frank Richter	<frank.richter@gmail.com>

* Mouse wheel events support.

2007-12-11	Frank Richter	<frank.richter@gmail.com>

* Resize support.

2007-12-11	Frank Richter	<frank.richter@gmail.com>

* Add focusing support and proper focus management. Proper focus management is 
  required for some things such as e.g. proper caret display.

2007-12-10	Frank Richter	<frank.richter@gmail.com>

* Fix build error with latest XULrunner CVS.

2007-12-10	Frank Richter	<frank.richter@gmail.com>

* Make antialiasing mode controllable.

2007-12-08	Frank Richter	<frank.richter@gmail.com>

* Fixed scrolling, painting and modifier issues.

2007-12-08	Frank Richter	<frank.richter@gmail.com>

* Changed modifier handling to always update internal state (and not just when
  gecko handled the event).

2007-12-08	Frank Richter	<frank.richter@gmail.com>

* Changed embedding object creation to take a (hidden) "API version" parameter
  which is used to make sure the used library matches the used header.

2007-12-07	Frank Richter	<frank.richter@gmail.com>

* Fixed space key to be sent as a character to gecko.

2007-12-07	Frank Richter	<frank.richter@gmail.com>

* Emit 'key press' events to gecko only on received key down events, not key
  up events as well.

2007-12-07	Frank Richter	<frank.richter@gmail.com>

* Change typing scheme so "object types" are not aliases to the base object
  types, but distinct types. This allows type checking by the compiler.

2007-11-28	Frank Richter	<frank.richter@gmail.com>

* Some dirty region handling tweaks.

2007-11-28	Frank Richter	<frank.richter@gmail.com>

* SDK tweaks: added note on message pumping; include ChangeLog.txt.

2007-11-28	Frank Richter	<frank.richter@gmail.com>

* Made the update logic smarter by actually utilizing the "dirty" regions
  passed in by Gecko.
